BEN1: REAL-drive per-operator throughput sweep measured and appended to doc/bench/findings.md (computenet-x9e.4.5)
Ran the full 18-subject x 2-direction (36 combination) REAL-drive
OperatorThroughputBenchmark sweep at the annotation config (fork=2,
warmup 5x1s, measurement 10x1s), rendered through ThroughputReport /
Findings.entry, and appended one entry to doc/bench/findings.md
(append-only, strictly after the prior 279 lines).

Result: only 1 of 36 rows (GROUP_BY_MAX retract) classifies Reportable
against NOISE_FLOOR at this config; the other 35 are named omissions
(Unreportable, dispersion 0.0149-0.1526 for INSERT vs 0.0048-0.0299 for
RETRACT). That INSERT/RETRACT dispersion asymmetry is reported as the
dominating-cost observation, consistent with TagState tag-map growth
being unbounded across invocations under INSERT and bounded under
RETRACT (per OperatorThroughputBenchmark's own documented mechanics) —
named as the best-supported suspect, not a profiled root cause. No
journal/durability wiring found in the benchmark's ManagedHost
construction, so WAL is confirmed not in play. Trigger:
TriggerClaim.None (MARKED INCOMPLETE) — no gap trigger answered.

No code changes; doc/bench/findings.md is the only file touched.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>